<resources>
    <string name="app_name">Afnan_Enayet_MyRuns6</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_runs_dialog">MyRunsDialog</string>

    <string-array name="fragment_titles">
        <item>Start</item>
        <item>History</item>
        <item>Settings</item>
    </string-array>

    <string name="input_type_title">Input type</string>
    <string name="activity_type_title">Activity type</string>
    <string name="start_string">Start</string>
    <string name="sync_string">Sync</string>

    <string-array name="manual_input_options">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart rate</item>
        <item>Comments</item>
    </string-array>

    <string-array name="activity_array">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill skiing</item>
        <item>Cross-country skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <string-array name="input_type_array">
        <item>Manual entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string name="account_prefs_title">Account preferences</string>
    <string name="privacy_settings_title">Private records</string>
    <string name="privacy_settings_summary">Post your anonymously</string>
    <string name="additional_settings_prefs_title">Additional settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pref_misc_title">Miscellaneous</string>
    <string name="pref_webpage_title">Webpage</string>
    <string name="pref_webpage_summary">http://web.cs.dartmouth.edu</string>
    <string name="pref_webpage_key">pref_webpage</string>
    <string name="pref_profile_title">Profile information</string>
    <string name="pref_profile_key">pref_profile</string>
    <string name="pref_profile_summary">Change information about your user profile</string>
    <string name="unit_pref_title">Unit preference</string>
    <string name="unit_pref_summary">Select metric or imperial units</string>
    <string name="pref_comments_title">Comments</string>
    <string name="pref_comments_summary">Enter additional information</string>
    <string name="pref_comments_key">pref_comments</string>
    <string name="browser_url">http://web.cs.dartmouth.edu</string>

    <!-- 0: metric, 1: imperial -->
    <string-array name="unit_preference_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string name="pref_unit_preference_key">pref_unit_preference</string>
    <string-array name="unit_preference_list">
        <item>Metric (kilometers)</item>
        <item>Imperial (miles)</item>
    </string-array>

    <!-- Profile settings -->
    <!-- Key corresponding to the strings for each preference are specified -->

    <!-- key: pref_profile_name -->
    <string name="pref_header_general">Profile</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_hint_profile_name">Your name here</string>
    <string name="pref_title_profile_name">Profile name</string>
    <string name="pref_profile_name_key">pref_profile_name</string>

    <!-- key: pref_email -->
    <string name="pref_email_key">pref_email</string>
    <string name="pref_default_email">example@example.com</string>
    <string name="pref_title_email">Email address</string>
    <string name="profile_content_description">A profile picture</string>
    <string name="pref_hint_email">Your email here</string>

    <!-- key: pref_phone_number -->
    <string name="pref_phone_number_key">pref_phone_number</string>
    <string name="pref_default_phone_number">1234567890</string>
    <string name="pref_title_phone_number">Phone number</string>
    <string name="pref_hint_phone_number">Your phone number here</string>

    <!-- key: pref_gender -->
    <string name="pref_title_gender">Gender</string>
    <string name="pref_gender_key">pref_gender</string>

    <integer-array name="pref_values_gender">
        <item>0</item>
        <item>1</item>
    </integer-array>

    <!-- key: pref_class -->
    <string name="pref_class_key">pref_class</string>
    <string name="pref_title_class">Class year</string>
    <string name="pref_hint_class">Your class year here</string>
    <integer name="pref_default_class">2017</integer>

    <!-- key: pref_major -->
    <string name="pref_major_key">pref_major</string>
    <string name="pref_title_major">Major</string>
    <string name="pref_hint_major">Your major here</string>
    <string name="pref_default_major">Computer Science</string>

    <string name="string_male">Male</string>
    <string name="string_female">Female</string>

    <!-- Profile buttons -->

    <string name="change_button_text">Change</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_toast_text">Profile saved</string>
    <string name="profile_pic_filename">profile_pic</string>
    <string name="crop_file_id">cropped</string>
    <string name="crop_error_message">Could not crop image</string>
    <string name="temp_pic_filename">temp</string>
    <string name="permissions_message">Need these permissions for this app to function!</string>
    <string name="permissions_title">Permissions needed</string>
    <string name="default_pref_string"></string>
    <string name="manual_entry_cancel_toast">Entry discarded</string>
    <string name="profile_picker_dialog_title">Pick profile picture</string>

    <string-array name="profile_picker_dialog_items">
        <item>Open camera</item>
        <item>Select from gallery</item>
    </string-array>

    <string name="gallery_chooser_title">Pick a photo</string>
    <string name="dialog_positive_text">OK</string>
    <string name="dialog_negative_text">Cancel</string>
    <string name="duration_dialog_title">Duration</string>
    <string name="distance_dialog_title">Distance</string>
    <string name="calories_dialog_title">Calories</string>
    <string name="heart_rate_dialog_title">Heart rate</string>
    <string name="comment_dialog_title">Comment</string>
    <string name="manual_entry_dialog">manual_entry_dialog</string>
    <string name="gallery_copy_filename">temp_gallery_copy</string>

    <string-array name="entry_detail_titles">
        <item>Input Type</item>
        <item>Activity type</item>
        <item>Date and time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart rate</item>
    </string-array>

    <string name="metric_units_distance">kilometers</string>
    <string name="imperial_units_distance">miles</string>
    <string name="delete">Delete</string>
    <string name="gmaps_api_key">AIzaSyCLF5jqtbAxQ85wlhLb-R0D_ynIlprC6Us</string>
    <string name="notification_title">MyRuns</string>
    <string name="notification_content">Recording your path now</string>
    <string name="action_delete">Delete</string>
</resources>
