<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.afnanenayet.afnan_enayet_myruns6.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_margin="5dp"
                app:srcCompat="@android:color/black"
                android:id="@+id/profile_image_view"
                android:contentDescription="@string/profile_content_description"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_width="0dp" />

            <Button
                android:text="@string/change_button_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/change_prof_pic_button"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:onClick="changePicCallback" />
        </LinearLayout>

        <TextView
            android:text="@string/pref_title_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_descriptor" />

        <EditText
            android:inputType="textCapWords"
            android:id="@+id/pref_profile_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:hint="@string/pref_hint_profile_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/pref_title_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_descriptor" />

        <EditText
            android:defaultValue="@string/pref_default_phone_number"
            android:inputType="phone"
            android:id="@+id/pref_phone_number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:hint="@string/pref_hint_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/pref_title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_descriptor" />

        <EditText
            android:defaultValue="@string/pref_default_email"
            android:inputType="textEmailAddress"
            android:id="@+id/pref_email"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:hint="@string/pref_hint_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/pref_title_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender_descriptor" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pref_gender"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/string_male"
                android:id="@+id/radio_male"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="14dp"
                android:textAlignment="center" />

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/string_female"
                android:id="@+id/radio_female"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="14dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif" />
        </RadioGroup>

        <TextView
            android:text="@string/pref_title_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/class_descriptor" />

        <EditText
            android:defaultValue="@integer/pref_default_class"
            android:inputType="number"
            android:id="@+id/pref_class"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:hint="@string/pref_hint_class"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/pref_title_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/major_descriptor" />

        <EditText
            android:defaultValue="@string/pref_default_major"
            android:inputType="textCapWords"
            android:id="@+id/pref_major"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:hint="@string/pref_hint_major"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/button_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/cancel_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_button"
                android:layout_weight="1"
                android:onClick="cancelButtonCallback" />

            <Button
                android:text="@string/save_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button"
                android:layout_weight="1"
                android:onClick="saveButtonCallback" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
